--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "private": true,
     "scripts": {
+        "dev": "",
         "serve": "php artisan serve",
-        "dev": "npm run development",
+
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
